# dbiz-ai-agent-project

./: GETTING_STARTED.md  README.md  package-lock.json  pyproject.toml
dbiz_ai_agent/: hooks.py  modules.txt
dbiz_ai_agent/agentic_ai/: __init__.py
dbiz_ai_agent/agentic_ai/agents/: __init__.py  base_agent.py  state.py
dbiz_ai_agent/agentic_ai/extractors/: __init__.py  base_extractor.py  pdf_extractor.py  text_extractor.py  word_extractor.py
dbiz_ai_agent/agentic_ai/prompts/: __init__.py  intent_prompts.py  (+2 more)
dbiz_ai_agent/api/: __init__.py  ai_catalog.py  analytics.py  auth.py  chat.py  chatbot_security.py  cloud_storage.py  document_permissions.py  documents.py  invoice_validation.py  ocr.py  permissions.py  roles.py  sales_order.py  settings.py  user_profile.py  users.py
dbiz_ai_agent/fixtures/: ai_agent_settings.json  chatbot_configuration.json  custom_field.json
dbiz_ai_agent/helpers/: __init__.py  chat_utility.py  contact_sync.py  cors.py  create_sample_data.py  sync_doctypes.py
dbiz_ai_agent/integrations/: __init__.py  qdrant_store.py  socketio_client.py
dbiz_ai_agent/scripts/: __init__.py  reindex_documents_permissions.py
dbiz_ai_agent/tests/: __init__.py
dbiz_ai_agent/www/: chat-widget-demo.html  dbiz_ai_agent.py
frontend/: .prettierrc.json  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: chat-min.html
frontend/src/: App.vue  index.css  main.js  router.js
socket_server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  server.js
(+205 files in other folders)
